# django-bills

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
app/: asgi.py  settings.py  urls.py  wsgi.py
bills/: admin.py  models.py  tests.py  views.py
bills/migrations/: 0001_initial.py  0002_alter_electricity_id_alter_gas_id.py  0002_rename_bill_energybill.py  0003_waterbill.py  0004_alter_energybill_reading_alter_energybill_units_kwh_and_more.py
